added team profile page + join/leave team feature
